--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "jwt-simple": "^0.5.6",
     "moment": "^2.24.0",
     "mongoose": "^5.9.10",
+    "mongoose-unique-validator": "^2.0.3",
     "multer": "^1.4.2",
     "uuid": "^8.0.0",
     "validator": "^13.0.0"
