--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "mongoose": "^5.9.10",
     "mongoose-unique-validator": "^2.0.3",
     "multer": "^1.4.2",
+    "socket.io": "^2.3.0",
     "sort-by": "^1.2.0",
     "uuid": "^8.0.0",
     "validator": "^13.0.0"
